install guardrails as package, run validations
